<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_voxelsdk</name>
  <version>0.6.11</version>
  <description>ROS 2 wrapper for TI Voxel SDK Time-of-Flight cameras</description>
  <maintainer email="prasad.bhat@ti.com">Texas Instruments</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
